<resources>
    <string name="app_name">CleanConverter</string>

    <string name="lblConversion">Conversion</string>
    <string name="lblCalculation">Calculation</string>
    <string name="lblLength">Length</string>
    <string name="lblWeight">Weight</string>
    <string name="lblTemperature">Temperature</string>
    <string name="lblBMI">BMI</string>
    <string name="lblConvert">Convert</string>
    <string name="lblReset">Reset</string>
    <string name="lblCalculate">Calculate</string>
    <string name="lblHeight">Height</string>
    <string name="lblUnitCm">cm</string>
    <string name="lblUnitKg">kg</string>
    <string name="lblUnitFt">ft</string>
    <string name="lblUnitIn">in</string>
    <string name="lblMetric">Metric</string>
    <string name="lblImperial">Imperial</string>
    <string name="lblUnitKgPerM2">kg/m2</string>
    <string name="lblCategory">Category</string>
    <string name="lblCentimeters">Centimeters</string>
    <string name="lblFeet">Feet</string>
    <string name="lblInches">Inches</string>
    <string name="lblKilometers">Kilometers</string>
    <string name="lblMeters">Meters</string>
    <string name="lblMiles">Miles</string>
    <string name="lblYards">Yards</string>
    <string name="lblUnitKm">km</string>
    <string name="lblUnitM">m</string>
    <string name="lblUnitMi">mi</string>
    <string name="lblUnitYd">yd</string>
    <string name="lblCelsius">Celsius</string>
    <string name="lblFahrenheit">Fahrenheit</string>
    <string name="lblKelvin">Kelvin</string>
    <string name="lblUnitC">°C</string>
    <string name="lblUnitF">°F</string>
    <string name="lblUnitK">K</string>
    <string name="lblGrams">Grams</string>
    <string name="lblUnitG">g</string>
    <string name="lblKilograms">Kilograms</string>
    <string name="lblUnitSt">st</string>
    <string name="lblUnitLb">lb</string>
    <string name="lblPounds">Pounds</string>
    <string name="lblStones">Stones</string>
    <string name="lblOunces">Ounces</string>
    <string name="lblUnitOz">oz</string>
    <string name="lblUnderweight">Underweight</string>
    <string name="lblNormalWeight">Normal weight</string>
    <string name="lblOverweight">Overweight</string>
    <string name="lblModeratelyObese">Moderately obese</string>
    <string name="lblSeverelyObese">Severely obese</string>
    <string name="lblVerySeverelyObese">Very severely obese</string>
    <string name="lblFeetPlusInch">Feet + inch</string>
</resources>
