<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bmi.BmiFragment">

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lblHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgSystem" />

    <EditText
        android:id="@+id/etHeightCm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/textView32"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <TextView
        android:id="@+id/tvHightCmUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/lblUnitCm"
        app:layout_constraintBaseline_toBaselineOf="@+id/etHeightCm"
        app:layout_constraintStart_toEndOf="@+id/etHeightCm" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grpMetric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="tvHightCmUnit,etHeightCm" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/textView34"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lblCalculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etWeight" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/lblReset"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnCalculate"
        app:layout_constraintStart_toEndOf="@+id/btnCalculate" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lblWeight"
        app:layout_constraintStart_toStartOf="@+id/textView32"
        app:layout_constraintTop_toBottomOf="@+id/etHeightFt" />

    <TextView
        android:id="@+id/tvWeightUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/lblUnitKg"
        app:layout_constraintBaseline_toBaselineOf="@+id/etWeight"
        app:layout_constraintStart_toEndOf="@+id/etWeight" />

    <EditText
        android:id="@+id/etHeightFt"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/etHeightCm"
        app:layout_constraintTop_toBottomOf="@+id/etHeightCm" />

    <TextView
        android:id="@+id/tvHeightFtUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/lblUnitFt"
        app:layout_constraintBaseline_toBaselineOf="@+id/etHeightFt"
        app:layout_constraintStart_toEndOf="@+id/etHeightFt" />

    <EditText
        android:id="@+id/etHeightIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/etHeightFt"
        app:layout_constraintEnd_toEndOf="@+id/etWeight"
        app:layout_constraintStart_toEndOf="@+id/tvHeightFtUnit" />

    <TextView
        android:id="@+id/tvHeightInUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/lblUnitIn"
        app:layout_constraintBaseline_toBaselineOf="@+id/etHeightIn"
        app:layout_constraintStart_toEndOf="@+id/etHeightIn" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grpImperial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="etHeightFt, etHeightIn, tvHeightFtUnit, tvHeightInUnit" />

    <RadioGroup
        android:id="@+id/rgSystem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbMetric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/lblMetric" />

        <RadioButton
            android:id="@+id/rbImperial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/lblImperial" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lblBMI"
        app:layout_constraintStart_toStartOf="@+id/btnCalculate"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/lblUnitKgPerM2"
        app:layout_constraintBaseline_toBaselineOf="@+id/etBmi"
        app:layout_constraintStart_toEndOf="@+id/etBmi" />

    <EditText
        android:id="@+id/etBmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lblCategory"
        app:layout_constraintStart_toStartOf="@+id/etBmi"
        app:layout_constraintTop_toBottomOf="@+id/etBmi" />

    <EditText
        android:id="@+id/etCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView31"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

</androidx.constraintlayout.widget.ConstraintLayout>